src/test/deca/library/invalid/result/mult_tableau_taille_different_output_expected.res
Test produit membre par membre de tableaux 1D
--------------
Tableau1D = [
5 ,5 ,]--------------
--------------
Tableau1D = [
6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,]--------------
Les deux matrices doivent être de la même taille pour la multiplication membre par membre
Erreur de dimension
